# galaga-in-terminal

./: Cargo.toml  README.md  build.rs
res/objects/: bullet.yaml  enemy.yaml  gameover.yaml  prestart.yaml  snowflake.yaml  snowflake2.yaml  turret.yaml
src/: gameloop.rs  main.rs
src/renderer/: mod.rs
src/renderer/types/: mod.rs  object.rs  renderer.rs
