[package]
name = "console-renderer"
version = "0.1.0"
authors = ["Maxim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.13.3"
yaml-rust = "0.4.3"
rand = "0.7.2"

[build-dependencies]
fs_extra = "1.1.0"
